add gitignore file and T3.py file, update T3

--- a/Talleres/T1/T1.ipynb
+++ b/Talleres/T1/T1.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Autores: Yenner Robayo\n",
@@ -29,9 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def opendDocuments():    \n",
@@ -61,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def findCoincidences(doc, find_term):\n",
@@ -77,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def cosine_similarity(vectorSpace1, vectorSpace2):\n",
@@ -97,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def createHistogram(query):\n",
@@ -113,9 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def createVectorSpace(histogram):\n",
@@ -128,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def createTdiDf(vectorSpace):\n",
@@ -146,10 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def search(tfidf):\n",
@@ -165,9 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese texto a buscar: usa\n"
+     ]
+    }
+   ],
    "source": [
     "query = input('Ingrese texto a buscar: ')"
    ]
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +208,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo total de la busqueda 0.022s.\n",
+      "La consulta es: usa\n",
+      "\n",
+      "Documento encontrado: #0\n",
+      "western tele-communications <wtlca> joins group western tele-communications inc said that through its subsidiary, westlink inc, it has joined \"netlink usa\", a general partnership consisting of telluride cablevision inc and mccaw satellite programming investments inc. western said it will act as a 40 pct investor, converting its cable television signals to satellite distribution in selected markets. the conversion is expected to improve reception of denver television signals delivered to cable operators and other customers in underserved rural or remote areas of the u.s., the company said. reuter ...\n",
+      "\n",
+      "Documento encontrado: #1\n",
+      "liberty all-star <usa> sets initial payout liberty all-star equity fund said it declared an initial dividend of five cts per share, payable april two to shareholders of record march 20. it said the dividend includes a quarterly dividend of three cts a share and a special payout of two cts a share, which covers the period from november three, 1986, when the fund began operations, to december 31, 1986. the fund said its quarterly dividend rate may fluctuate in the future. reuter ...\n",
+      "\n",
+      "Documento encontrado: #2\n",
+      "japan distributor may import mazda u.s.-made cars <autorama inc>, a distributor for ford motor co <f> in japan, is considering importing cars made by <mazda motor manufacturing (usa) corp>, (mmuc), a wholly owned u.s. subsidiary of mazda motor corp <mazt.t>, an autorama spokesman said. mazda, owned 24 pct by ford, is due to begin production of the 2,000-cc-engine cars at the michigan plant in september at an annual rate of 240,000, of which between 60 and 70 pct will go to ford and the rest to mazda's own u.s. sales network. reuter ...\n",
+      "\n",
+      "Documento encontrado: #3\n",
+      "r.j.r. nabisco unit forms overseeing committee r.j. reynolds tobacco co, a unit of r.j.r. nabisco inc <rjr>, said it has formed an executive management committee to oversee the company's worldwide tobacco operations. reynolds tobacco said the committee's members will be senior managers of reynolds tobacco co, r.j. reynolds tobacco usa, and r.j. reynolds international inc. r.j.r. nabisco is reportedly attempting to form a master limited partnership out of its tobacco unit, part of which will be sold to the public. reuter ...\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Tiempo total de la busqueda %0.3fs.\" % totalTime)\n",
     "\n",
@@ -299,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
