--- a/Talleres/T3/T3.ipynb
+++ b/Talleres/T3/T3.ipynb
@@ -49,8 +49,8 @@
     }
    ],
    "source": [
-    "import json\n",
     "from __future__ import print_function\n",
+    "from json import JSONDecoder\n",
     "from time import time\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import NMF\n",
@@ -65,7 +65,7 @@
     "print(\"Loading dataset and extracting TF-IDF features...\")\n",
     "\n",
     "file_documents = open(\"documents.txt\", \"r\")\n",
-    "documents = json.JSONDecoder().decode(file_documents.read())\n",
+    "documents = JSONDecoder().decode(file_documents.read())\n",
     "file_documents.close()\n",
     "\n",
     "file_stopwords = open(\"stopwords.txt\", \"r\", errors=\"replace\")\n",
@@ -76,14 +76,16 @@
     "for key, value in documents.items():\n",
     "    dataset.append(value)\n",
     "\n",
-    "vectorizer = TfidfVectorizer(max_df=0.95, min_df=2, max_features=n_features, stop_words=stopwords)\n",
+    "vectorizer = TfidfVectorizer(\n",
+    "    max_df=0.95, min_df=2, max_features=n_features, stop_words=stopwords)\n",
     "\n",
     "tfidf = vectorizer.fit_transform(dataset[:n_samples])\n",
     "\n",
     "print(\"done in %0.3fs.\" % (time() - t0))\n",
     "print()\n",
     "\n",
-    "print(\"Fitting the NMF model with n_samples=%d and n_features=%d...\" % (n_samples, n_features))\n",
+    "print(\"Fitting the NMF model with n_samples=%d and n_features=%d...\" %\n",
+    "      (n_samples, n_features))\n",
     "\n",
     "nmf = NMF(n_components=n_topics, random_state=1).fit(tfidf)\n",
     "\n",
@@ -97,7 +99,7 @@
     "    print(\"Topic #%d:\" % topic_idx)\n",
     "    print(\" \".join([feature_names[i]\n",
     "                    for i in topic.argsort()[:-n_top_words - 1:-1]]))\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
@@ -126,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
