Añadido T2, Exposición, Tfidf
*  añadido los archivos del t2 con MongoDb
*  corrección en el algoritmo que calcula la tfidf
*  añadido documento de exposición

--- a/Talleres/T1/T1.ipynb
+++ b/Talleres/T1/T1.ipynb
@@ -20,8 +20,7 @@
     "import math\n",
     "import json\n",
     "from time import time\n",
-    "from collections import Counter\n",
-    "from nltk.tokenize import word_tokenize "
+    "from collections import Counter"
    ]
   },
   {
@@ -50,8 +49,12 @@
     "    file_documents = open(\"documents.txt\", \"r\")\n",
     "    documents = json.JSONDecoder().decode(file_documents.read())\n",
     "    file_documents.close()\n",
+    "        \n",
+    "    file_inv_frec_vector = open(\"inv_frec_vector.txt\", \"r\")\n",
+    "    inv_frec_vector = json.JSONDecoder().decode(file_inv_frec_vector.read())\n",
+    "    file_inv_frec_vector.close()\n",
     "    \n",
-    "    return inverdIndex, stopwords, words, allTfidf ,documents"
+    "    return inverdIndex, stopwords, words, allTfidf ,documents, inv_frec_vector"
    ]
   },
   {
@@ -121,11 +124,10 @@
    "source": [
     "def createTdiDf(vectorSpace):\n",
     "    tfidf = []\n",
-    "    doc_lenght = len(vectorSpace)\n",
-    "    for ter in vectorSpace:\n",
+    "    for id, ter_frec in enumerate(vectorSpace):\n",
     "        eq = 0\n",
-    "        if ter > 0:\n",
-    "            eq = ter*math.log(doc_lenght)\n",
+    "        if ter_frec > 0:\n",
+    "            eq = ter_frec*inv_frec_vector[id]\n",
     "        tfidf.append(eq)\n",
     "    return tfidf"
    ]
@@ -148,23 +150,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingrese texto a buscar: usa\n"
-     ]
-    }
-   ],
-   "source": [
-    "query = input('Ingrese texto a buscar: ')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,12 +158,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese texto a buscar: company\n",
+      "\n",
+      "Tiempo total de la busqueda 1.047s.\n",
+      "Total de documentos encontrados: 242\n",
+      "La consulta es: company\n",
+      "\n",
+      "Documento encontrado: #0, cs: 0.190667\n",
+      "Documento #411: electronic mail <emca> financing attempt fails electronic mail corp of america said its efforts to secure additional financing for expansion have fallen through. the company said that there are no immediate prospects for financing through other sources, though efforts will continue. the company said operations wil continue while further efforts are made. negotiations with an undisclosed company had been onging for four months, the company said. reuter \n",
+      "\n",
+      "Documento encontrado: #1, cs: 0.170725\n",
+      "Documento #751: united merchants <umm> to buy its own stock united merchants and manufactuerers inc said its board has authorized the repurchase of up to one mln shares of the company's common stock. the company now has about 9.1 mln shares outstanding. it said the stock will be acquired from time to time on the open market, depending on market conditions and other factors. the number of shares purchased and the timing of the purchases are also subject to restrictions under certain of the company's debt instruments, it added. reuter \n",
+      "\n",
+      "Documento encontrado: #2, cs: 0.167754\n",
+      "Documento #682: integrated generics <ign> will not comment integrated generics inc said it is in the midst of several developments which could be favorable for the company but can make no further comments at the present time. the company said it released this brief statement in response to the american stock exchange's inquiry on the activity of the company's common stock, which was up 5/8 to five in midafternoon trading. reuter \n",
+      "\n",
+      "Documento encontrado: #3, cs: 0.152069\n",
+      "Documento #586: western union <wu> names new president western union said john pope jr has been elected president of the telegraph company and executive vice president of the corporation. western union said pope, formerly the executive vice president of the company, succeeds robert leventhal. the company said leventhal will remain chairman and chief executive officer of the corporation and company, the prinipal subsidiary of western union corp. reuter \n",
+      "\n",
+      "Documento encontrado: #4, cs: 0.147472\n",
+      "Documento #33: ccx network <ccxn> secondary offering underway ccx network inc said it was offering 220,838 shares of stock at 15.75 dlrs a share though underwriters stephens inc and cazenove inc. the company said it was selling the stock on behalf of some shareholders, including those who recently received shares in the company in exchange for their businesses. the company said it was receiving no proceeds from the offering. reuter \n",
+      "\n",
+      "Documento encontrado: #5, cs: 0.123575\n",
+      "Documento #846: cousins home furnishings <cuzz> get credit line cousins home furnishings inc said it obtained a 5.0-mln-dlr working capital line of credit from lloyds bank plc, through its los angeles branch. the credit is supported by a guarantee from the company's canadian affiliate, the brick warehouse ltd, which will receive 200,000-dlrs worth of the company's stock. the line of credit, which expires in july, 1989, will be used to pay off a 1,750,000-dlr working capital loan the company owes wells farg bank. reuter \n",
+      "\n",
+      "Documento encontrado: #6, cs: 0.123246\n",
+      "Documento #383: ilc technology <ilct> officer removed ilc technology inc said raymond montoya, vice president of finance, has been removed as an officer and terminated as an employee of the company, and ilc has filed a civil action against him to recover alleged improprer disbursements of company funds. the company said montoya has been arrested by police in hawthorne, calif., and charged with grand theft and embezzlement. it said the extent of the disbursements has not yet been determined. in independent auditor is helping assess the alleged irregularities, the company said. reuter \n",
+      "\n",
+      "Documento encontrado: #7, cs: 0.122961\n",
+      "Documento #22: brown-forman <bfdb> sets stock split, ups payout brown-forman inc said its board has approved a three-for-two stock split and a 35 pct increase in the company cash dividend. the company cited its improved earnings outlook and continued strong cash flow as reasons for raising the dividend. brown-forman said the split of its class a and class b common shares would be effective march 13. the company said directors declared a quarterly cash dividend on each new share of both classes of 28 cts, payable april one to holders of record march 20. prior to the split, the company had paid 31 cts quarterly. brown-forman today reported a 37 pct increase in third quarter profits to 21.6 mln dlrs, or 1.00 dlr a share, on a seven pct increase in sales to a record 337 mln dlrs. brown-forman said nine month profits declined a bit to 66.0 mln dlrs, or 3.07 dlrs a share, from 66.2 mln dlrs, or 3.08 dlrs a share, a year earlier due to a second quarter charge of 37 cts a share for restructuring its beverage operations. the company said lower corporate tax rates and the restructuring \"are expected to substantially improve brown-forman's earnings and cash flow in fiscal 1988.\" reuter \n",
+      "\n",
+      "Documento encontrado: #8, cs: 0.121576\n",
+      "Documento #728: lodgistix <ldgx> to buyback 100,000 shares lodgistix inc said its board authorized a program for the company to purchase up to 100,000 of its shares from time to time. the company said the shares will be used for general purposes, including incentive programs. reuter \n",
+      "\n",
+      "Documento encontrado: #9, cs: 0.117311\n",
+      "Documento #808: turner corp <tur> unit builds hospital addition the turner corp's construction company new york said its orange county office has begun building a 23 mln dlr addition to kaiser permanente medical center. the five-story, 197,000 square foot adition will be used primarily as an outpatient treatment clinic, it said. developer for the project is kaiser foundation hospitals in pasadena, calif., the company said. the completion date is october 1988, according to the company. reuter \n",
+      "\n",
+      "Documento encontrado: #10, cs: 0.117130\n",
+      "Documento #185: videotron buys into exhibit company (groupe videotron ltd) said it agreed to buy 50 pct of (groupe promexpo inc), a company which specializes in product exhibits, for three mln dlrs. reuter \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# abrir documentos con los documentos procesados\n",
-    "inverdIndex, stopwords, words, allTfidf ,documents = opendDocuments()\n",
+    "inverdIndex, stopwords, words, allTfidf ,documents, inv_frec_vector = opendDocuments()\n",
+    "\n",
+    "query = input('Ingrese texto a buscar: ')\n",
     "\n",
     "# obtiene el tiempo actual\n",
     "t0 = time()\n",
@@ -196,103 +229,30 @@
     "docs = search(tfidf)\n",
     "\n",
     "# obtiene el tiempo total de la busqueda\n",
-    "totalTime = time()-t0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Muestra resultados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tiempo total de la busqueda 0.022s.\n",
-      "La consulta es: usa\n",
-      "\n",
-      "Documento encontrado: #0\n",
-      "western tele-communications <wtlca> joins group western tele-communications inc said that through its subsidiary, westlink inc, it has joined \"netlink usa\", a general partnership consisting of telluride cablevision inc and mccaw satellite programming investments inc. western said it will act as a 40 pct investor, converting its cable television signals to satellite distribution in selected markets. the conversion is expected to improve reception of denver television signals delivered to cable operators and other customers in underserved rural or remote areas of the u.s., the company said. reuter ...\n",
-      "\n",
-      "Documento encontrado: #1\n",
-      "liberty all-star <usa> sets initial payout liberty all-star equity fund said it declared an initial dividend of five cts per share, payable april two to shareholders of record march 20. it said the dividend includes a quarterly dividend of three cts a share and a special payout of two cts a share, which covers the period from november three, 1986, when the fund began operations, to december 31, 1986. the fund said its quarterly dividend rate may fluctuate in the future. reuter ...\n",
-      "\n",
-      "Documento encontrado: #2\n",
-      "japan distributor may import mazda u.s.-made cars <autorama inc>, a distributor for ford motor co <f> in japan, is considering importing cars made by <mazda motor manufacturing (usa) corp>, (mmuc), a wholly owned u.s. subsidiary of mazda motor corp <mazt.t>, an autorama spokesman said. mazda, owned 24 pct by ford, is due to begin production of the 2,000-cc-engine cars at the michigan plant in september at an annual rate of 240,000, of which between 60 and 70 pct will go to ford and the rest to mazda's own u.s. sales network. reuter ...\n",
-      "\n",
-      "Documento encontrado: #3\n",
-      "r.j.r. nabisco unit forms overseeing committee r.j. reynolds tobacco co, a unit of r.j.r. nabisco inc <rjr>, said it has formed an executive management committee to oversee the company's worldwide tobacco operations. reynolds tobacco said the committee's members will be senior managers of reynolds tobacco co, r.j. reynolds tobacco usa, and r.j. reynolds international inc. r.j.r. nabisco is reportedly attempting to form a master limited partnership out of its tobacco unit, part of which will be sold to the public. reuter ...\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Tiempo total de la busqueda %0.3fs.\" % totalTime)\n",
+    "totalTime = time()-t0\n",
     "\n",
+    "# muestra resultados\n",
+    "print()\n",
+    "print(\"Tiempo total de la busqueda %0.3fs.\" % totalTime)\n",
+    "print(\"Total de documentos encontrados: %d\" % len(docs))\n",
     "print(\"La consulta es: \" + query)\n",
     "print()\n",
     "\n",
     "i = 0\n",
     "for key in sorted(docs, key=docs.get, reverse=True):\n",
-    "    print(\"Documento encontrado: #%s\" % i)\n",
-    "    print('%s' % documents[key] + \"...\")\n",
+    "    print(\"Documento encontrado: #%s, cs: %f\" % (i, docs[key]))\n",
+    "    print('Documento #%s: %s' % (key, documents[key]))\n",
     "    print()\n",
     "    i += 1\n",
     "    \n",
     "    if (i > 10):\n",
-    "        break\n",
-    "        "
+    "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
